src/test/deca/context/invalid/obtained_res/redefWrongSignMethcont.res
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:40) - verify program: start
DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass(ListDeclClass.java:43) - verify listClass: start
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:45) - verify program: Pass 1 end
./src/test/deca/context/invalid/created/testPass2/redefWrongSignMeth.deca:5:4: MethodRedefinitionException: Method overloading is not allowed; only method redefinitions with identical signatures are permitted.
